Sat Sep 11 12:41:22 2004  Steve Totten  <totten_s@ociweb.com>

        * orbsvcs/tests/ImplRepo/run_test.pl:
        * orbsvcs/tests/ImplRepo/NameService/run_test.pl:
        * orbsvcs/tests/ImplRepo/locked/run_test.pl:
        * utils/nslist/run_test.pl:
          Removed some trailing blanks and tab characters from these
          files.

Sat Sep 11 12:25:07 2004  Steve Totten  <totten_s@ociweb.com>

        * orbsvcs/ImplRepo_Service/ImplRepo_Service.mpc:
        * utils/NamingViewer/NamingViewer.mpc:
        * utils/nslist/nslist.mpc:
          Modified MPC files for the following TAO utilities to make
          sure the executables are installed in $ACE_ROOT/bin:
          - tao_imr
          - nslist
          - nsdel
          - nsadd
          - NamingViewer

        * orbsvcs/tests/ImplRepo/run_test.pl:
        * orbsvcs/tests/ImplRepo/NameService/run_test.pl:
        * orbsvcs/tests/ImplRepo/locked/run_test.pl:
        * orbsvcs/tests/InterfaceRepo/Application_Test/run_test.pl:
        * utils/nslist/run_test.pl:
          Also modified various test scripts that invoke these
          utilities to get them from $ACE_ROOT/bin.


Sat Sep 11 08:47:58 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/orbsvcs/Notify/Properties.h:

	  Changed to use TAO_NOTIFY_SERV_SINGLETON_DECLARE.

	* orbsvcs/orbsvcs/Log/NotifyLogNotification.h:

	  Removed #include of CosNamingC.h.  It isn't used, but requires
	  linking with naming client library with some windows compilers.

Sat Sep 11 00:44:34 2004  Olli Savia  <ops@iki.fi>

        * TAO_IDL/ast/ast_module.cpp:
          Changed NULL to 0 to silence compile time warning.

Fri Sep 10 12:28:52 2004  J.T. Conklin  <jtc@acorntoolworks.com>

        * orbsvcs/tests/Trading/Trading.mpc:

          Changed colocated_test project to inherit from trading_serv.

          Changed import_test and export_test projects to inherit from
          portableserver.

        * orbsvcs/tests/Notify/Test_Filter/Test_Filter.mpc:
